--- a/projects/fa/assets/css/main.css
+++ b/projects/fa/assets/css/main.css
@@ -19,14 +19,16 @@ body {
  */
 
 ::-moz-selection {
-    background: #f2c2c9;
-    color: #a4003a;
+    /*background: #f2c2c9;*/
+    background: #74CFAE;
+    color: #fff;
     text-shadow: none;
 }
 
 ::selection {
-    background: #16a085;
-    color: #a4003a;
+    /*background: #16a085;*/
+    background: #74CFAE;
+    color: #fff;
     text-shadow: none;
 }
 
@@ -186,8 +188,9 @@ body {
         }
     }
 }*/
-
-
+.white-bg {
+    background-color: #fff;
+}
 
 #contact .contact-form .controls {
     padding-bottom:20px
@@ -263,7 +266,11 @@ body {
 
 html,
 body {
-    height: 100%;
+    max-width: 100vw;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 body {
@@ -454,20 +461,30 @@ a:after {
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
-
-#headerwrap {
-	/*background: url(../img/header_bg.jpg) no-repeat center top;*/
-	background-color: #74CFAE;
-    /*background: url(../img/icons/dog1.png) no-repeat center top;*/
+#yup {
+    position: relative;
+}
+#abc {
     margin-top: -50px;
-	padding-top:120px;
+    padding-top: 100px;
+    min-height: 650px;
+    width: 100vw;
+}
+#headerwrap {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+
+	background-color: #74CFAE;
+    /*margin-top: -50px;
+	padding-top:120px;*/
 	text-align:center;
-	background-attachment: relative;
-	background-position:  center 15%;
-	min-height: 650px;
-	width: 100%;
+	/*background-attachment: fixed;*/
+	/*background-position:  center 15%;*/
+	/*min-height: 650px;
+	width: 100%;*/
 	
-    -webkit-background-size: 100%;
+    /*-webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
     background-size: 100%;
@@ -475,7 +492,8 @@ a:after {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover;*/
+    z-index: -1;
 }
 
 /*#headerwrap h1 {
@@ -502,7 +520,8 @@ a:after {
 
 #info,
 #greywrap {
-	background: #f5f5f5;
+	/*background: #f5f5f5;*/
+    background-color: #fff;
 	margin-top: 0px;
 	padding-top: 40px;
 	border-bottom: 1px solid #ddd;
@@ -696,21 +715,16 @@ a:after {
 	color: #fff;
 	background: #74CFAE;
 }
-
 .grid figcaption h5 {
-	margin: 0;
-	padding-top: 0px;
-	/*padding-left: 20px;*/
-    padding-left: 0;
-	padding-bottom: 5px;
+    text-align: center;
+    margin-top: -3px;
+    font-size: 14px;
 	color: #fff;
 	font-weight: 700;
-	text-align: left;
 	letter-spacing: 2px;
-	
 }
 
-.grid figcaption a {
+/*.grid figcaption a {
 	text-align: left;
 	padding: 5px 10px;
 	margin-left: 20px;
@@ -718,7 +732,7 @@ a:after {
 	background: #2f2f2f;
 	color: #fff;
 	font-size: 13px;
-}
+}*/
 
 /* Caption Style */
 .mask figure {
@@ -733,6 +747,7 @@ a:after {
 
 .no-touch .mask figure:hover img,
 .mask figure.cs-hover img {
+    cursor: pointer;
 	-webkit-transform: translateY(-30px);
 	-moz-transform: translateY(-30px);
 	-ms-transform: translateY(-30px);
@@ -744,14 +759,15 @@ a:after {
 	width: 100%;
 	top: auto;
 	bottom: 0;
-	opacity: 0;
-	-webkit-transform: translateY(100%);
+	/*opacity: 0;*/
+    opacity: 1;
+	/*-webkit-transform: translateY(100%);
 	-moz-transform: translateY(100%);
 	-ms-transform: translateY(100%);
 	transform: translateY(100%);
 	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
 	-moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
-	transition: transform 0.4s, opacity 0.1s 0.3s;
+	transition: transform 0.4s, opacity 0.1s 0.3s;*/
 }
 
 .no-touch .mask figure:hover figcaption,
@@ -766,26 +782,27 @@ a:after {
 	transition: transform 0.4s, opacity 0.1s;
 }
 
-.mask figcaption a {
+/*.mask figcaption a {
 	position: absolute;
 	top:10px;
 	bottom: 10px;
 	right: 30px;
-}
+}*/
 
 
 /* ==========================================================================
    Blog Section
    ========================================================================== */
-
+#blog {
+    background-color: #fff;
+    width: 100%;
+}
 .blog-bg {
 	/*background: #2b2b2b;*/
     background-color: #74CFAE;
 	padding-right: 0px;
-	padding-left: 0px;
-	
+	padding-left: 0px;	
 }
-
 .blog-bg h4 {
 	/*color: #dadada;*/
     /*color: dark grey;*/
@@ -803,33 +820,91 @@ a:after {
 
 .blog-content {
 	padding-top: 10px;
+    padding-left: 35px;
+    padding-right: 21px;
 	background: #f2f2f2;
+    height: 100%;
 }
 
+.blog-content h2 {
+    /*text-align: center;*/
+}
+
+#calender-frame {
+    width: 75%; 
+    height: 400px;
+}
+
+#credit,
+#credit a {
+    color: #555;
+}
 
 /* ==========================================================================
    MEDIA QUERIES
    ========================================================================== */
 
+/* ----------- Non-Retina Screens ----------- */
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+    .mask figcaption {
+        opacity: 0;
+        -webkit-transform: translateY(100%);
+        -moz-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+        transform: translateY(100%);
+        -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+        -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+        transition: transform 0.4s, opacity 0.1s 0.3s;
+    }
+    .grid figcaption h5 {
+        font-size: 16px;
+        margin-bottom: 18px;
+    }
+}
+
+/* ----------- Retina Screens ----------- */
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) { 
+    .mask figcaption {
+        opacity: 0;
+        -webkit-transform: translateY(100%);
+        -moz-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+        transform: translateY(100%);
+        -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+        -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+        transition: transform 0.4s, opacity 0.1s 0.3s;
+    }
+}
+
 
 @media screen and (max-width:1050px), screen and (max-device-width:1050px){
-	body .header{background-attachment: scroll;}
+	
+    
 }
 
 
 /*ipad portrait*/
 @media only screen and (min-device-width:768px) and (max-device-width : 1024px) and (orientation : portrait){
-	.header{background-attachment: scroll;}
+	
+    
 }
 
 @media screen and (max-width:769px) {
-	#headerwrap h1 {
-		font-size: 80px;
-	}
 	#headerwrap p {
-		font-size: 30px;
-		line-height: 38px;
+		font-size: 22px;
+		line-height: 25px;
 	}
+    #headerwrap .header-img span img {
+        width: 65px;
+        height: auto;
+    }
+    .gallery2 {
+        margin-top: -43px;
+    } 
+    #calender-frame {
+        width: 100%; 
+        height: 350px;
+    }
 }
 
 
