--- a/tools/style.css
+++ b/tools/style.css
@@ -1,238 +1,142 @@
-/* Reset */
-
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,dfn,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}
-
-
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td {
+	margin:0;
+	padding:0;
+}
+table {
+	border-collapse:collapse;
+	border-spacing:0;
+}
+fieldset,img {
+	border:0;
+}
+address,caption,dfn,th,var {
+	font-style:normal;
+	font-weight:normal;
+}
+li {
+	list-style:none;
+}
+caption,th {
+	text-align:left;
+}
+h1,h2,h3,h4,h5,h6 {
+	font-size:100%;
+	font-weight:normal;
+}
 html,
 body {
   width: 100%;
   height: 100%;
-  background-color: #000;
+  background: #fff;
 }
-
-
-body{
-margin:0;
-padding:0;
-color: #fff;
-text-align: center;
-display: table;
-background: url(../images/bg30.jpg) right bottom no-repeat;
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-box-shadow: inset 0 0 100px rgba(0,0,0,0.5);
-position: relative;
+body {
+	margin:0;
+	padding:0;
+	color: #000;
+	text-align: center;
+	display: table;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	position: relative;
 }
-
-.black{
-background-color: rgba(0, 0, 0, 0.5);
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-}
-
 #wrapper{
 	position: relative;
 	height: 100%;
 	width: 100%;
 	margin: auto;
 }
-
 #header{
 	width: 100%;
-	/*padding: 100px 0 100px 0;*/
 	padding-top: 15%;
 	margin: auto;
 	padding-bottom: 5%;
 }
-
-h1{
-	font-family: 'Damion', cursive;
-	font-size: 103px;
-}
-
 h2{
-	font-family: 'Josefin Sans', sans-serif;
-	font-size: 30px;
-	letter-spacing: 4px;
+	font-family: sans-serif;
+	font-size: 24px;
+	letter-spacing: 2px;
 }
-
 h2 strong.sep-one{
 	width: 60px;
 	height: 1px;
-	background: #fff;
+	background: #000;
 	position: absolute;
 	margin-left: -80px;
 	margin-top: 15px;
 }
-
 h2 strong.sep-two{
 	width: 60px;
 	height: 1px;
-	background: #fff;
+	background: #000;
 	position: absolute;
 	margin-left: 15px;
 	margin-top: 15px;
 }
-
-
 #middle{
 	width: 100%;
-	background: #ffffff;
 	padding: 10px 0;
 	margin: 50px 0;
-	opacity:0.7;
 }
-
 #middle p{
-	font-family: 'Josefin Sans', sans-serif;
+	font-family: sans-serif;
 	font-size: 24px;
-	color: #000000;
+	color: #000;
 	line-height: 34px;
-	/*padding: 0 30%;*/
 }
-
 #middle p span{
 	color:#25A6E1;
 }
-
 #footer{
 	width: 100%;
 	padding-top: 8%;
 }
 
-/*ul.social
-{
-width: 242px;
-margin: 80px auto 0;
-height: 62px;
-}
 
-ul.social li{
-float: left;
-background: url(../images/social.png) left top no-repeat;
-position: relative;
-height: 62px;
-margin-right: 28px;
-}
-
-ul.social li a{
-display: block;
-width: 62px;
-height: 62px;
-}
-
-
-ul.social li.facebook{
-height: 62px;
-background-position: 0 0;
-width: 62px;
-}
-
-ul.social li.facebook:hover{
-background-position: 0 -62px;
-}
-
-
-
-ul.social li.twitter{
-height: 62px;
-background-position: -90px 0;
-width: 62px;
-}
-
-ul.social li.twitter:hover{
-background-position: -90px -62px;
-}
-
-
-
-ul.social li.youtube{
-margin-right: 0;
-height: 62px;
-background-position: -180px 0;
-width: 62px;
-}
-
-ul.social li.youtube:hover{
-background-position: -180px -62px;
-}*/
 
 
 @media screen and (max-width: 568px){
 	#header{
 		width: 100%;
-		/*padding: 30px 0 30px 0;*/
 		padding-top: 25%;
 		margin: auto;
 		padding-bottom: 0;
 	}
-
-
 	h1{
 		font-size: 53px;
 	}
-	
 	h2{
 		
 		font-size: 1em;
 		letter-spacing: 2px;
 	}
-
 	h2 strong.sep-one{
 		width: 30px;
 		margin-left: -40px;
 		margin-top: 7px;
 	}
-	
 	h2 strong.sep-two{
 		width: 30px;
 		margin-left: 10px;
 		margin-top: 7px;
 	}
-
 	#middle{
 		margin: 50px 0 20px 0;
 		width: 90%;
 		padding: 5%;
 	}
-	
 	#middle p{
 		font-size: 18px;
 		color: #000000;
 		line-height: 24px;
 		padding: 0;
 	}
-	
 	#middle p span{
-		color:#e63b4d;
+		color:#25A6E1;
 	}
-	
 	#footer {
 		padding-top: 35%;
-		}
-	
+	}
 }
 
-.button {
-	background: #25A6E1;
-	background: -moz-linear-gradient(top,#25A6E1 0%,#188BC0 100%);
-	background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#25A6E1),color-stop(100%,#188BC0));
-	background: -webkit-linear-gradient(top,#25A6E1 0%,#188BC0 100%);
-	background: -o-linear-gradient(top,#25A6E1 0%,#188BC0 100%);
-	background: -ms-linear-gradient(top,#25A6E1 0%,#188BC0 100%);
-	background: linear-gradient(top,#25A6E1 0%,#188BC0 100%);
-	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#25A6E1',endColorstr='#188BC0',GradientType=0);
-	padding:8px 13px;
-	color:#fff;
-	font-family:'Helvetica Neue',sans-serif;
-	font-size:17px;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border:1px solid #1A87B9;
-}
