--- a/projects/fa/assets/css/main.css
+++ b/projects/fa/assets/css/main.css
@@ -6,37 +6,11 @@ select,
 textarea {
     color: #222;
 }
-
 body {
     font-size: 1em;
     line-height: 1.4;
 }
-
-/*
- * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    /*background: #f2c2c9;*/
-    background: #74CFAE;
-    color: #fff;
-    text-shadow: none;
-}
-
-::selection {
-    /*background: #16a085;*/
-    background: #74CFAE;
-    color: #fff;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
- hr {
+hr {
     display: block;
     height: 1px;
     border: 0;
@@ -44,158 +18,78 @@ body {
     margin: 1em 0;
     padding: 0;
 }
-
-/*
- * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
- */
-
- img {
+img {
     vertical-align: middle;
 }
-
+::-moz-selection {
+    background: #74CFAE;
+    color: #fff;
+    text-shadow: none;
+}
+::selection {
+    color: #fff;
+    background: #555;
+    text-shadow: none;
+}
 .dog {
     background-color: #74CFAE;
-    /*margin: 35px;*/
-    /*background-color: yellow;*/
 }
-
 .img-circle {
     padding: 5px;
-    /*margin: 5px;*/
 }
-
 .navbar {
     font-weight: 800;
-    background-color: white;
+    background-color: #fff;
 }
-
 .navbar-toggle {
     background-color: #74CFAE;
 }
-
-/*.navbar-inverse > .collapse > .nav > .a:focus,
-.navbar-inverse > .navbar-collapse > .nav > .a:focus,
-.navbar-inverse > .collapse > .navbar-nav > .a:focus,
-.navbar-inverse > .navbar-collapse > .navbar-nav > .a:focus {
-    color: #74CFAE;
-}
-*/
-
 .navbar-inverse .navbar-header .navbar-brand:hover {
     color: #74CFAE;
 } 
-
 .header-icons {
     height: 150px;
     width: auto;
 }
-
 .header-img {
     padding: 7%;
 }
-
-
-
 .gallery {
-    background: black;
+    background: #000;
 }
-
-.panel-heading {
-    /*background-color: #74CFAE;*/
-}
-
 .button {
     background-color: #74CFAE;
     color: white;
 }
-
 .asterisk {
     font-size: 18px;
 }
-
 .logo {
     margin-top: -5px;
     margin-left: -5px;
     margin-right: 5px;
 }
-
 .left {
     text-align: left;
 }
-
+.p {
+    line-height: 28px;
+    margin-bottom: 25px;
+}
 #footerwrap h3,
 #footerwrap p,
 #footerwrap span {
     color: white;
 }
-
 #footerwrap h4 {
     font-size: 15px;
 }
-
-
-/*#contact{
-    background: #333;
-    background-size: cover; 
-    .section-title span{
-        color: #fff;
-    }
-    .contact-form{  
-        .controls{
-            padding-bottom: 20px;
-            input.contact_input{
-                color: #000;
-                background-color: #ffffff;
-                float: left;
-                border: 1px solid #0BAFA0;
-                font-size: 14px;
-                font-weight: 300;
-                height: 48px;
-                padding: 0 12px;
-                width: 88%;             
-            }
-            i{
-                font-size: 18px;
-                color: #0BAFA0;
-                width: 48px;
-                height: 48px;
-                background-color: #ffffff;
-                padding: 12px;
-                text-align: center;
-                border: 1px solid #0BAFA0;
-                border-left: none;
-            }
-        }
-        textarea{
-            font-size: 14px;
-            background-color: #ffffff;
-            border: 1px solid #0BAFA0;
-            width: 100%;
-            padding: 2% 3%;
-            height: 185px;
-            border-radius: 0px;
-        }
-        textarea:focus{
-            box-shadow: none;
-        }
-        .btn{
-            color: #ffffff;
-            font-weight: 300;
-            margin-top: 30px;
-            font-size: 24px;
-            width: 100%;
-            margin: 20px 0;
-        }
-    }
-}*/
 .white-bg {
     background-color: #fff;
 }
-
 #contact .contact-form .controls {
-    padding-bottom:20px
-    }
-
+    padding-bottom:20px;
+}
 #contact .contact-form .controls input.contact_input {
     color:#000;
     background-color:#fff;
@@ -204,9 +98,8 @@ body {
     font-weight:300;
     height:48px;
     padding:0 12px;
-    width:88%
-    }
-
+    width:88%;
+}
 #contact .contact-form .controls i {
     font-size:18px;
     color:#0BAFA0;
@@ -216,9 +109,8 @@ body {
     padding:12px;
     text-align:center;
     border:1px solid #74CFAE;
-    border-left:0
-    }
-
+    border-left:0;
+}
 #contact .contact-form textarea {
     font-size:14px;
     background-color:#fff;
@@ -226,44 +118,72 @@ body {
     width:100%;
     padding:2% 3%;
     height:185px;
-    border-radius:0
-    }
-
+    border-radius:0;
+}
 #contact .contact-form textarea:focus {
-    box-shadow:none
-    }
-
+    box-shadow:none;
+}
 #contact .contact-form .button {
     font-weight:450;
     margin-top:30px;
     font-size:24px;
     width:100%;
-    margin:20px 0
+    margin:20px 0;
 }
-
-.hide {
-    visibility: hidden;
+.panel h3{
+    font-size: 22px;
+    margin: 15px 0;
 }
-
-.divider1 {
-    background-image: url('../img/bg/divider1.jpg')
+.panel-top {
+    border:1px solid #74CFAE;
+    background-color: #fff;
 }
- 
-
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
- textarea {
+.panel-bottom .btn,
+.panel-bottom {
+    background-color: #74CFAE;
+    color: #fff;
+    padding: 5px 0;
+}
+.panel .btn:active {
+    box-shadow: none;
+    border: none;
+}
+.panel-bottom {
+    border:1px solid #74CFAE;
+}
+.panel:hover .btn {
+    color: #222;
+}
+.pointer:hover {
+    cursor: pointer;
+}
+table {
+    width:100%;
+}
+table, th, td {
+    border: 0px solid #333;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+table tr:nth-child(even) {
+    background-color: #fff;
+}
+table tr:nth-child(odd) {
+   background-color:#eee;
+}
+table th    {
+    background-color: #74CFAE;
+    color: #fff;
+}
+textarea {
     resize: vertical;
 }
-
-
 /* ==========================================================================
-   General styles
+   General Styles
    ========================================================================== */
-
 html,
 body {
     max-width: 100vw;
@@ -272,65 +192,42 @@ body {
     padding: 0;
     overflow-x: hidden;
 }
-
 body {
     font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
     color: #555;
-
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
 }
-
 .col-md-4 {
 	padding-bottom: 20px;
 }
-
-.row {
-margin-right: 0px;
-margin-left: -15px;
+.shift-left {
+    margin-left: -15px;
 }
-
 .modal-header {
 	background: #74CFAE;
-
 }
-
 .modal-header h4 {
 	color: white;
 }
-
 .modal-footer {
-	/*background: #2b2b2b;*/
     background: #74CFAE;
 }
-
-
-.navbar-default {
-border-color: transparent;
-background-color: #dadada;
-}
-
-
 .navbar-toggle {
-border-color: transparent;
-border: 0px solid transparent;
+    border-color: transparent;
+    border: 0px solid transparent;
 }
-
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
 	background-color: #16a085;
 	color: black;
 }
-
-
-
 hr {
     position: relative;
     border: none;
 }
-
 hr:before {
     content: " ";
     position: absolute;
@@ -340,113 +237,40 @@ hr:before {
     height: 2px;
     background: #ccc;
 }
-
 a img {
     background: white;
 }
-
-.odd a img {
-    background: #f5f5f5;
-}
-
-/* Titles */
 h1, h2, h3, h4, h5, h6 {
     font-family: "Raleway";
     font-weight: 300;
     color: #333;
 }
-
-
-/* Paragraph & Typographic */
 p {
     line-height: 28px;
     margin-bottom: 25px;
 }
-
-.centered {
+.center {
     text-align: center;
 }
-
-.paragraph-lead {
-    font-size: 20px;
-    color: #74CFAE;
-}
-
 strong {
     font-weight: 700;
 }
-
-em {
-    font-weight: 300;
-}
-
-pre {
-    background: #ebebeb;
-    border: none;
-    font-family: "Monaco";
-    font-size: 16px;
-    color: #666;
-    padding: 20px;
-    line-height: 28px;
-}
-
-small {
-    font-size: 12px;
-}
-
-blockquote,
-blockquote p {
-    line-height: 28px;
-    color: #999;
-    font-weight: 300;
-    font-style: italic;
-}
-
-blockquote {
-    position: relative;
-    margin: 0 0 40px -30px;
-    padding-left: 30px;
-    border-left: 5px solid #74CFAE;
-}
-
-blockquote cite {
-    position: absolute;
-    bottom: -25px;
-    right: 0;
-    font-size: 12px;
-    font-style: italic;
-    color: #333;
-    font-weight: 300;
-}
-
-blockquote cite:before {
-    content: "-- "
-}
-
-/* Images */
-.overflow-image {
-    margin-top: -65px;
-}
-
 /* Links */
 a {
     color: #74CFAE;
     word-wrap: break-word;
-
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
     -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
     -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
     -o-transition: color 0.1s ease-in, background 0.1s ease-in;
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
-
 a:hover,
 a:focus {
-    color: #c0392b;
+    color: #555;
     text-decoration: none;
     outline: 0;
 }
-
 a:before,
 a:after {
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -455,9 +279,6 @@ a:after {
     -o-transition: color 0.1s ease-in, background 0.1s ease-in;
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
-
-
-
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
@@ -474,38 +295,10 @@ a:after {
     height: 100%;
     width: 100%;
     position: fixed;
-
 	background-color: #74CFAE;
-    /*margin-top: -50px;
-	padding-top:120px;*/
 	text-align:center;
-	/*background-attachment: fixed;*/
-	/*background-position:  center 15%;*/
-	/*min-height: 650px;
-	width: 100%;*/
-	
-    /*-webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;*/
     z-index: -1;
 }
-
-/*#headerwrap h1 {
-	color:#ffffff;
-	margin-top: 300px;
-	padding-bottom: 30px;
-	letter-spacing: 8px;
-	font-size: 100px;
-	font-weight: bold;
-	text-shadow: 2px 2px 2px #000;
-}*/
-
 #headerwrap p {
 	color:#ffffff;
 	font-size: 40px;
@@ -514,24 +307,18 @@ a:after {
 	line-height: 40px;
 	letter-spacing: 3px;
 	margin-left: 15px;
-	/*text-shadow: 1px 1px 1px #000;*/
     text-shadow: 2px 2px 2px #000;
 }
-
 #info,
 #greywrap {
-	/*background: #f5f5f5;*/
     background-color: #fff;
 	margin-top: 0px;
 	padding-top: 40px;
-	border-bottom: 1px solid #ddd;
 	text-align: center;
 }
-
 #greywrap .callout {
 	margin-bottom: 20px;
 }
-
 #greywrap p {
 	margin-left: 30px;
 	margin-right: 30px;
@@ -539,13 +326,11 @@ a:after {
 	padding-top: 15px;
 	padding-bottom: 15px;
 }
-
 #greywrap .icon {
 	font-size: 60px;
 	line-height: 30px;
 	margin-bottom: 10px;
 }
-
 #footerwrap {
 	background: #2b2b2b;
 	margin-top: 0px;
@@ -554,159 +339,21 @@ a:after {
 	border-bottom: 1px solid #ddd;
 	text-align: center;
 }
-
 #footerwrap h4 {
 	color: white;
 }
-
-
-/* ==========================================================================
-   Box Sections
-   ========================================================================== */
-
-.white h1 {
-	padding-top: 35px;
-}
-
-.white p {
-	padding-top: 25px;
-}
-
-/* Section Dividers */
-.section-divider {
-    z-index: 999;
-    width: 100%;
-    display: table;
-    max-height: 450px;
-    border-bottom: 2px solid #E6EAED;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    padding-top: 30px;
-    padding-bottom: 70px;
-    margin-top: 45px;
-
-
-    background-position: center center;
-
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-    background-attachment: relative;
-    
-    text-align: center;
-}
-
-.textdivider h1 {
-	padding-top: 70px;
-	/*color: white;*/
-    color: black;
-	font-size: 40px;
-}
-
-.textdivider p {
-	color: white;
-	font-size: 25px;
-}
-
-
-/* Section Dividers Backgrounds */
-
-/*.divider1 {
-	background-image: url('../img/bg/divider1.jpg')
-}
-
-.divider2 {
-	background-image: url('../img/bg/divider2.jpg')
-}
-
-.divider3 {
-	background-image: url('../img/bg/divider3.jpg');
-	margin-top: 0px;
-}
-
-.divider4 {
-	background-image: url('../img/bg/divider4.jpg')
-}
-*/
-.divider6 {
-	background-image: url('../img/bg/divider6.jpg')
-}
-
-
-
-/* ==========================================================================
-   Services Section
-   ========================================================================== */
-
-.service-trigger {
-    display: block;
-	position: relative;
-    margin-bottom: 15px;
-    color: white;
-    font-size: 20px;
-    text-align: center;
-    height: 168px;
-    cursor: pointer;
-	padding: 90px 20px 50px 20px;
-    border: none;
-    background: #333;
-}
-
-.service-trigger:before {
-    width: 100%;
-    top: 50px;
-    color: #74CFAE;
-    font-size: 36px;
-    text-align: center;
-	position: absolute;
-	left: 0;
-}
-
-.service-active .service-trigger {
-    background: #222;
-}
-
-.service-active p {
-	font-family: 'Lato', sans-serif;
-	padding-top: 10px;
-}
-
-.service-content {
-    padding: 15px 20px;
-    background: #e6eaed;
-    display: block;
-    height: auto
-}
-
-.service-content p:last-child {
-    margin: 0;
-}
-
-
 /* ==========================================================================
    Image Mask
    ========================================================================== */
-
 .grid figure {
 	margin: 0;
 	position: relative;
 }
-
 .grid figure img {
 	width: 100%;
 	display: block;
 	position: relative;
 }
-
 .grid figcaption {
 	position: absolute;
 	top: 0;
@@ -723,53 +370,32 @@ a:after {
 	font-weight: 700;
 	letter-spacing: 2px;
 }
-
-/*.grid figcaption a {
-	text-align: left;
-	padding: 5px 10px;
-	margin-left: 20px;
-	display: inline-block;
-	background: #2f2f2f;
-	color: #fff;
-	font-size: 13px;
-}*/
-
 /* Caption Style */
 .mask figure {
 	overflow: hidden;
 }
-
 .mask figure img {
 	-webkit-transition: -webkit-transform 0.4s;
 	-moz-transition: -moz-transform 0.4s;
 	transition: transform 0.4s;
 }
-
 .no-touch .mask figure:hover img,
 .mask figure.cs-hover img {
-    cursor: pointer;
 	-webkit-transform: translateY(-30px);
 	-moz-transform: translateY(-30px);
 	-ms-transform: translateY(-30px);
 	transform: translateY(-30px);
 }
-
+.mask:hover {
+    cursor: pointer;
+}
 .mask figcaption {
 	height: 50px;
 	width: 100%;
 	top: auto;
 	bottom: 0;
-	/*opacity: 0;*/
     opacity: 1;
-	/*-webkit-transform: translateY(100%);
-	-moz-transform: translateY(100%);
-	-ms-transform: translateY(100%);
-	transform: translateY(100%);
-	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
-	-moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
-	transition: transform 0.4s, opacity 0.1s 0.3s;*/
 }
-
 .no-touch .mask figure:hover figcaption,
 .mask figure.cs-hover figcaption {
 	opacity: 1;
@@ -781,15 +407,6 @@ a:after {
 	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
 	transition: transform 0.4s, opacity 0.1s;
 }
-
-/*.mask figcaption a {
-	position: absolute;
-	top:10px;
-	bottom: 10px;
-	right: 30px;
-}*/
-
-
 /* ==========================================================================
    Blog Section
    ========================================================================== */
@@ -798,26 +415,18 @@ a:after {
     width: 100%;
 }
 .blog-bg {
-	/*background: #2b2b2b;*/
     background-color: #74CFAE;
-	padding-right: 0px;
-	padding-left: 0px;	
+    padding: 0;
 }
 .blog-bg h4 {
-	/*color: #dadada;*/
-    /*color: dark grey;*/
     color:#2b2b2b;
 	padding-top: 0px;
     font-weight: 500;
 }
-
 .blog-bg h5 {
-	/*color: #dadada;*/
-    /*color: dark grey;*/
     color: #2b2b2b;
 	font-size: 11px;
 }
-
 .blog-content {
 	padding-top: 10px;
     padding-left: 35px;
@@ -825,21 +434,14 @@ a:after {
 	background: #f2f2f2;
     height: 100%;
 }
-
-.blog-content h2 {
-    /*text-align: center;*/
-}
-
 #calender-frame {
     width: 75%; 
     height: 400px;
 }
-
 #credit,
 #credit a {
     color: #555;
 }
-
 /* ==========================================================================
    MEDIA QUERIES
    ========================================================================== */
@@ -882,7 +484,6 @@ a:after {
     
 }
 
-
 /*ipad portrait*/
 @media only screen and (min-device-width:768px) and (max-device-width : 1024px) and (orientation : portrait){
 	
@@ -906,8 +507,3 @@ a:after {
         height: 350px;
     }
 }
-
-
-
-
-
