--- a/projects/vertfarms/assets/css/style.css
+++ b/projects/vertfarms/assets/css/style.css
@@ -110,10 +110,10 @@ img {
     color: #103643;
 }
 .divider {
-    /*max-width: 100vw;
-    height: 50vh;*/
+    /*max-width: 100vw;*/
+    height: 500px;
+    height: 50vh;
     max-width: 100%;
-    height: 450px;
     /*overflow: hidden;*/
     /*position: fixed;*/
     /*background-attachment: fixed;*/
@@ -128,14 +128,13 @@ img {
 }
 
 #divider1 {
-    /*background-position: 100% 100%;*/
-    background: center center;
-    background-size: cover;
+    background-image: url(../img/background/4.jpg); 
+    background-image: url(../img/background/4.jpg); 
     background-repeat: no-repeat;
-    background-image: url(../img/background/4.gif); 
-    background-image: url(../img/background/4.gif); 
-    /*background-position: center center;*/
+    background-position: center center;
     background-attachment: fixed;
+    max-width: 100vw;
+    background-size: 100%;
     /*-webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
@@ -145,37 +144,35 @@ img {
     -o-background-size: cover; */
     /*z-index: -1;*/
 }
-.gt-ie8  #divider1 {
-    background-attachment: scroll;
-}
 #divider2 {
     background: url(../img/background/1.jpg);
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: center center;
+    background-attachment: fixed;
     -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
-    background-size: 100%; 
+    /*background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
-    background-size: cover;
+    background-size: cover;*/
 }
 #divider3 {
     background: url(../img/background/3.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    -webkit-background-size: 100%; 
+    /*-webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
-    background-size: 100%; 
+    background-size: 100%; */
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
     background-size: cover;
 }
+
 #header .main-navigation{
     max-width: 100vw;
     background-color: #fff;
@@ -258,7 +255,7 @@ img {
     -o-background-size: 100%; 
     background-size: 100%; 
     -webkit-background-size: cover; 
-    -moz-background-size: cover; 
+   - moz-background-size: cover; 
     -o-background-size: cover;
     background-size: cover;
     color: #fff;
