--- a/projects/vertfarms/assets/css/style.css
+++ b/projects/vertfarms/assets/css/style.css
@@ -134,7 +134,7 @@ img {
     background-position: center center;
     background-attachment: fixed;
     background-size: 100%;
-    max-width: 100vw;
+    /*max-width: 100vw;*/
     -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
@@ -151,7 +151,7 @@ img {
     -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
-    max-width: 100vw;
+    /*max-width: 100vw;*/
     background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
@@ -171,7 +171,7 @@ img {
     -moz-background-size: cover; 
     -o-background-size: cover; 
     background-size: cover;
-    max-width: 100vw;
+    /*max-width: 100vw;*/
 }
 
 #header .main-navigation{
