--- a/projects/vertfarms/assets/css/style.css
+++ b/projects/vertfarms/assets/css/style.css
@@ -111,7 +111,7 @@ img {
 }
 .divider {
     /*max-width: 100vw;*/
-    height: 500px;
+    /*height: 500px;*/
     height: 50vh;
     max-width: 100%;
     /*overflow: hidden;*/
@@ -129,7 +129,7 @@ img {
 
 #divider1 {
     background-image: url(../img/background/4.jpg); 
-    background-image: url(../img/background/4.jpg); 
+    /*background-image: url(../img/background/4.jpg); */
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
