--- a/projects/game/assets/css/main.css
+++ b/projects/game/assets/css/main.css
@@ -182,14 +182,16 @@ hr {
 /*FOOTER*/
 .copy {
   position: fixed;
-  bottom: 85px;
+  bottom: 90px;
   width: 100%;
   height: 60px;
   text-align: center;
 }
 #copy {
   position: relative;
+  top: 0;
   width: 80%;
+  margin: 5px;
   /*margin-left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
@@ -206,6 +208,8 @@ hr {
   position: relative;
   width: 80%;
 }
+
+
 
 
 /* ==========================================================================
