--- a/projects/portfolio/assets/css/style.css
+++ b/projects/portfolio/assets/css/style.css
@@ -54,13 +54,14 @@ hr {
 	position: absolute;
 	width: 100%;
 	height: 101vh;
-	background-color: rgba(28,255,195,0.5);
-	/*background-color: rgba(0,0,0,.5);*/
+	/*background-color: rgba(28,255,195,0.3);*/
+	background-color: rgba(0,0,0,.5);
+	/*background-color: rgba(235,235,235,.5);*/
 	/*z-index: 0;*/
 }
 #bg1 {
-	background: url("http://media.giphy.com/media/3rgXBLTr8N4TuoLFGE/giphy.gif") no-repeat center center;
-	/*background: url("../img/g3.jpg") no-repeat center center;*/
+	/*background: url("https://s3.amazonaws.com/f.cl.ly/items/1E1A3b3I102D3h2K3S0f/contained.gif") no-repeat center center;*/
+	background: url("../img/trans.jpg") no-repeat center center;
 	width: 100%;
 	height: 100%;
 	-webkit-background-size: cover;
@@ -69,7 +70,7 @@ hr {
 	background-size: cover;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
-    opacity: .9;
+    opacity: .8;
 	/*background-color: rgba(1,137,105,0.8);*/
     z-index: 3;
 }
@@ -86,17 +87,26 @@ hr {
     opacity: .5;
     z-index: 2;
 }
-
+#bg3 {
+	position: absolute;
+	width: 180px;
+	height: auto;
+	bottom: 46px;
+	left: 20%;
+	z-index: 2;
+}
 
 
 #header {
-	top: 28vh;
+	/*top: 28vh;*/
+	top: 18vh;
 	text-align: center;
 	position: relative;
 	/*background-color: rgba(0,0,0,0.3);*/
 }
 .text-bg {
-	/*background-color: rgba(0,0,0,0.75);*/
+	/*background-color: rgba(217,240,4,0.3);*/
+	/*background-color: rgba(0,0,0,0.3);*/
 	/*margin: 0 10%;*/
 }
 #name {
@@ -107,8 +117,8 @@ hr {
 	line-height: 63px;
 	color: #fff;
 	text-shadow: 1px 1px #000;
-	/*color: #000;*/
-	/*text-shadow: 1px 1px #fff;*/
+	/*color: #000;
+	text-shadow: 1px 1px #fff;*/
 	/*background-color: rgba(0,0,0,0.5);*/
 	z-index: 5;
 }
@@ -118,11 +128,14 @@ hr {
 	padding-top: 7px;
 	color: #fff;
 	text-shadow: 1px 1px #000;
+	/*color: #000;
+	text-shadow: 1px 1px #fff;*/
 	/*background-color: rgba(0,0,0,0.5);*/
 	z-index: 5;
 }
 #view-projects {
-	margin-top: 8vh;
+	/*margin-top: 8vh;*/
+	margin-top: 30vh;
 	width: 190px;
 	z-index: 5;
 }
@@ -134,7 +147,7 @@ hr {
 	width: 100%;
 	text-align: left;
 	background: #eee;
-	/*z-index: 1;*/
+	z-index: 1;
 }
 .project {
 	font-size: 22px;
@@ -166,7 +179,7 @@ hr {
 	background-size: cover;
 	color: #fff;
 	text-shadow: 1px 1px #000;
-	/*color: #000;*/
+	/*color: #000;
 	/*text-shadow: 1px 1px #fff;*/
 }
 #contact span {
