--- a/projects/portfolio/assets/css/style.css
+++ b/projects/portfolio/assets/css/style.css
@@ -14,7 +14,6 @@ body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     overflow-x: hidden;
-    /*z-index: -1;*/
 }
 hr {
 	padding: 0;
@@ -55,29 +54,16 @@ hr {
 	width: 100%;
 	height: 101vh;
 	/*background-color: rgba(28,255,195,0.3);*/
-	background-color: rgba(0,0,0,.5);
+	/*background-color: rgba(0,0,0,.2);*/
 	/*background-color: rgba(235,235,235,.5);*/
+	/*background-color: rgba(1,137,105,0.8)*/
 	/*z-index: 0;*/
-}
-#bg1 {
+/*}
+#bg1 {*/
 	/*background: url("https://s3.amazonaws.com/f.cl.ly/items/1E1A3b3I102D3h2K3S0f/contained.gif") no-repeat center center;*/
-	background: url("../img/trans.jpg") no-repeat center center;
-	width: 100%;
-	height: 100%;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-    filter: alpha(opacity=50);
-    opacity: .8;
-	/*background-color: rgba(1,137,105,0.8);*/
-    z-index: 3;
-}
-#bg2 {
-	background: url("http://media.giphy.com/media/3rgXBLTr8N4TuoLFGE/giphy.gif") no-repeat center center;
-	width: 100%;
-	height: 100%;
+	background: url("../img/sleek.jpg") no-repeat center center;
+	/*width: 100%;
+	height: 100%;*/
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -85,21 +71,36 @@ hr {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
     opacity: .5;
+    z-index: 3; 
+}
+#bg2 {
+	background: url("../img/gif.gif") no-repeat center center;
+	width: 100%;
+	height: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    opacity: 1;
     z-index: 2;
 }
 #bg3 {
-	position: absolute;
+	position: relative;
 	width: 180px;
 	height: auto;
-	bottom: 46px;
-	left: 20%;
+	/*bottom: 46px;*/
+	bottom: 181px;
+	/*left: 20%;*/
+	left: -5px;
 	z-index: 2;
 }
 
 
 #header {
-	/*top: 28vh;*/
-	top: 18vh;
+	top: 28vh;
+	/*top: 18vh;*/
 	text-align: center;
 	position: relative;
 	/*background-color: rgba(0,0,0,0.3);*/
@@ -134,8 +135,8 @@ hr {
 	z-index: 5;
 }
 #view-projects {
-	/*margin-top: 8vh;*/
-	margin-top: 30vh;
+	margin-top: 8vh;
+	/*margin-top: 30vh;*/
 	width: 190px;
 	z-index: 5;
 }
